Add proper way to display HTML content

--- a/make_jupyterlab_unsusable_demo.ipynb
+++ b/make_jupyterlab_unsusable_demo.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import HTML"
+    "from IPython.display import HTML, IFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,9 +31,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Either of the following cells will make Jupyterlab unusable**\n",
+    "**The proper way to disply a rendered notebook within a notebook is to use an IFrame:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"700\"\n",
+       "            height=\"600\"\n",
+       "            src=\"empty_notebook.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fe579e18290>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(src='empty_notebook.html', width=700, height=600)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Otherwise, either of the following cells will make Jupyterlab unusable**\n",
     "\n",
-    "To make it usable again, just re-execute the same cell with a different content!!"
+    "To make it usable again, just re-execute the same cell with a different content."
    ]
   },
   {
